--- a/src/profile.html
+++ b/src/profile.html
@@ -6,23 +6,8 @@
     <title>Profile</title>
     <link rel="stylesheet" href="../dist/css/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link
-      rel="icon"
-      type="image/png"
-      href="/src/assets/favivon/favicon-96x96.png"
-      sizes="96x96"
-    />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/src/assets/favivon/favicon.svg"
-    />
-    <link rel="shortcut icon" href="/src/assets/favivon/favicon.ico" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/src/assets/favivon/apple-touch-icon.png"
-    />
+    <link rel="icon" type="image/png" href="/src/assets/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/favicon/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Hammer Time" />
   </head>
   <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
