--- a/src/login.html
+++ b/src/login.html
@@ -53,6 +53,7 @@
         <div id="message" class="mt-4 text-center font-header"></div>
       </div>
     </div>
+    <footer id="footer-container"></footer>
     <script type="module" src="/src/js/login.js"></script>
   </body>
 </html>
