--- a/src/profile.html
+++ b/src/profile.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-title" content="Hammer Time" />
   </head>
   <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
-    <main class="w-full max-w-lg mx-auto p-4 mt-20">
+    <main class="w-full max-w-lg mx-auto p-4 mt-20 flex-grow">
       <div
         class="border w-full border-primary rounded-lg p-8 flex items-start justify-between mb-6 bg-white shadow-md"
       >
@@ -122,7 +122,7 @@
         <span class="font-header">Create</span>
       </button>
     </main>
-
+    <div id="footer-container" class="bg-primary text-white h-24 border-t flex items-center justify-center"></div>
     <script type="module" src="/src/js/profile.js"></script>
   </body>
 </html>
