--- a/src/register.html
+++ b/src/register.html
@@ -5,82 +5,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
     <link rel="stylesheet" href="../dist/css/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/src/assets/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/favicon/apple-touch-icon.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/src/assets/favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/src/assets/favicon/apple-touch-icon.png"
+    />
     <meta name="apple-mobile-web-app-title" content="Hammer Time" />
   </head>
   <body
-    class="bg-white text-secondary flex-col items-center justify-center min-h-screen"
+    class="flex flex-col min-h-screen bg-white text-secondary font-body"
   >
-    <div
-      class="bg-primary p-8 rounded-lg shadow-md w-full max-w-md mx-auto mt-20"
-    >
-      <h1 class="text-white text-3xl font-bold text-center mb-6">
-        Create Account
-      </h1>
-      <form id="registerForm" class="space-y-4">
-        <div>
-          <label for="name" class="block text-sm font-medium text-white"
-            >Name</label
+    <div id="content" class="flex-grow flex flex-col items-center justify-center">
+      <div
+        class="bg-primary p-8 rounded-lg shadow-md w-full max-w-md mx-auto mt-20"
+      >
+        <h1 class="text-white text-3xl font-bold text-center mb-6">
+          Create Account
+        </h1>
+        <form id="registerForm" class="space-y-4">
+          <div>
+            <label for="name" class="block text-sm font-medium text-white">
+              Name
+            </label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Enter your name"
+              required
+              class="mt-1 w-full px-4 py-2 bg-white text-secondary border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-secondary"
+            />
+          </div>
+          <div>
+            <label for="email" class="block text-sm font-medium text-white">
+              Email
+            </label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Enter your email"
+              required
+              class="mt-1 w-full px-4 py-2 bg-white text-secondary border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-secondary"
+            />
+          </div>
+          <div>
+            <label
+              for="password"
+              class="block text-sm font-medium text-white"
+            >
+              Password
+            </label>
+            <input
+              type="password"
+              id="password"
+              name="password"
+              placeholder="Enter your password"
+              required
+              class="mt-1 w-full px-4 py-2 bg-white text-secondary border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-secondary"
+            />
+          </div>
+          <div>
+            <label
+              for="avatar"
+              class="block text-sm font-medium text-white"
+            >
+              Avatar URL (optional)
+            </label>
+            <input
+              type="url"
+              id="avatar"
+              name="avatar"
+              placeholder="Enter avatar URL"
+              class="mt-1 w-full px-4 py-2 bg-white text-secondary border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-secondary"
+            />
+          </div>
+          <button
+            type="submit"
+            class="w-full py-2 bg-tertiary text-white font-medium rounded hover:bg-prussian-blue transition"
           >
-          <input
-            type="text"
-            id="name"
-            name="name"
-            placeholder="Enter your name"
-            required
-            class="mt-1 w-full px-4 py-2 bg-white text-secondary border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-secondary"
-          />
-        </div>
-        <div>
-          <label for="email" class="block text-sm font-medium text-white"
-            >Email</label
-          >
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Enter your email"
-            required
-            class="mt-1 w-full px-4 py-2 bg-white text-secondary border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-secondary"
-          />
-        </div>
-        <div>
-          <label for="password" class="block text-sm font-medium text-white"
-            >Password</label
-          >
-          <input
-            type="password"
-            id="password"
-            name="password"
-            placeholder="Enter your password"
-            required
-            class="mt-1 w-full px-4 py-2 bg-white text-secondary border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-secondary"
-          />
-        </div>
-        <div>
-          <label for="avatar" class="block text-sm font-medium text-white"
-            >Avatar URL (optional)</label
-          >
-          <input
-            type="url"
-            id="avatar"
-            name="avatar"
-            placeholder="Enter avatar URL"
-            class="mt-1 w-full px-4 py-2 bg-white text-secondary border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-secondary"
-          />
-        </div>
-        <button
-          type="submit"
-          class="w-full py-2 bg-tertiary text-white font-medium rounded hover:bg-prussian-blue transition"
-        >
-          Register
-        </button>
-      </form>
-      <div id="message" class="mt-4 text-center"></div>
+            Register
+          </button>
+        </form>
+        <div id="message" class="mt-4 text-center"></div>
+      </div>
     </div>
-    <script src="./js/register.js" type="module"></script>
+    <div id="footer-container"></div>
+    <script type="module" src="./js/register.js"></script>
   </body>
 </html>
