FIX: pagination and padding
fixed pagination for better mobile view and added som padding on for mobile on different pages

--- a/src/create.html
+++ b/src/create.html
@@ -23,7 +23,7 @@
     <meta name="apple-mobile-web-app-title" content="Hammer Time" />
   </head>
   <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-body">
-    <main class="flex-grow flex items-center justify-center">
+    <main class="flex-grow flex items-center justify-center px-5">
       <div class="w-full max-w-lg p-4 bg-white shadow-md rounded-lg">
         <h1 class="text-2xl font-bold mb-6 font-header">Create New Listing</h1>
         <form id="createListingForm" class="space-y-4">
