--- a/src/footer.html
+++ b/src/footer.html
@@ -1,4 +1,4 @@
-<footer class="flex flex-col items-center justify-center w-full h-32 border-t">
+<footer class="flex flex-col items-center justify-center w-full h-36 border-t bg-primary text-white text-center p-4">
     <a
       class="flex items-center justify-center"
       href="../index.html"
@@ -9,7 +9,8 @@
       </svg>
     </a>
     <a href="../index.html">Hammer Time Auctions</a>
-    <p class="text-xs text-gray-400 mt-2">© 2024 Hammer Time Auctions. All rights reserved.</p>
+    <p class="text-xs text-gray-400 mt-2">© 2024 Hammer Time Auctions.</p>
+    <p class="text-xs text-gray-400 mt-2">All rights reserved.</p>
     <button 
       id="backToTop" 
       class="mt-2 text-sm text-gray-400 hover:text-primary transition" 
