--- a/src/login.html
+++ b/src/login.html
@@ -12,7 +12,7 @@
     <meta name="apple-mobile-web-app-title" content="Hammer Time" />
   </head>
   <body class="bg-white text-secondary min-h-screen flex flex-col">
-    <div class="flex-grow flex items-center justify-center pt-16">
+    <div class="flex-grow flex items-center justify-center pt-16  px-5">
       <div class="bg-primary p-8 rounded-lg shadow-md w-full max-w-md">
         <h1 class="text-white text-3xl font-bold font-header text-center mb-6">Login</h1>
         <form id="loginForm" class="space-y-4">
