--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div id="errorMessage" class="hidden text-red-500 text-center mt-6"></div>
     </main>
-    <div id="footer-container" class="bg-primary text-white h-24 border-t flex items-center justify-center"></div>
+    <div id="footer-container"></div>
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
