--- a/src/register.html
+++ b/src/register.html
@@ -25,7 +25,7 @@
   <body
     class="flex flex-col min-h-screen bg-white text-secondary font-body"
   >
-    <div id="content" class="flex-grow flex flex-col items-center justify-center">
+    <div id="content" class="flex-grow flex flex-col items-center justify-center px-5">
       <div
         class="bg-primary p-8 rounded-lg shadow-md w-full max-w-md mx-auto mt-20"
       >
