padding and formating

--- a/src/profile.html
+++ b/src/profile.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile</title>
     <link rel="stylesheet" href="../dist/css/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/src/assets/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/favicon/apple-touch-icon.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/src/assets/favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/src/assets/favicon/apple-touch-icon.png"
+    />
     <meta name="apple-mobile-web-app-title" content="Hammer Time" />
   </head>
   <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
@@ -16,9 +28,15 @@
         class="border w-full border-primary rounded-lg p-8 flex items-start justify-between mb-6 bg-white shadow-md"
       >
         <div>
-          <p id="username" class="text-lg font-bold  font-header">Loading name...</p>
-          <p id="email" class="text-sm text-gray-600 font-body">Loading email...</p>
-          <p id="bio" class="text-sm text-gray-800 mt-2 font-body">Loading bio...</p>
+          <p id="username" class="text-lg font-bold font-header">
+            Loading name...
+          </p>
+          <p id="email" class="text-sm text-gray-600 font-body">
+            Loading email...
+          </p>
+          <p id="bio" class="text-sm text-gray-800 mt-2 font-body">
+            Loading bio...
+          </p>
           <button
             id="myUpdate"
             class="w-full flex items-center justify-center border border-primary rounded-md p-1 mt-2 hover:bg-primary hover:text-white font-header"
@@ -44,7 +62,9 @@
         <div
           class="bg-white rounded-lg p-8 w-full max-w-lg border border-primary"
         >
-          <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center font-header">
+          <h2
+            class="text-2xl font-bold text-gray-800 mb-6 text-center font-header"
+          >
             Update Profile
           </h2>
           <form id="updateForm" class="space-y-4">
@@ -122,7 +142,10 @@
         <span class="font-header">Create</span>
       </button>
     </main>
-    <div id="footer-container" class="bg-primary text-white h-24 border-t flex items-center justify-center"></div>
+    <div
+      id="footer-container"
+      class="bg-primary text-white h-24 border-t flex items-center justify-center"
+    ></div>
     <script type="module" src="/src/js/profile.js"></script>
   </body>
 </html>
