--- a/src/single.html
+++ b/src/single.html
@@ -30,7 +30,10 @@
       ></div>
       <div id="errorMessage" class="text-red-500 mt-4 hidden font-header"></div>
     </main>
-    <div id="footer-container" class="bg-primary text-white h-24 border-t flex items-center justify-center"></div>
+    <div
+      id="footer-container"
+      class="bg-primary text-white h-24 border-t flex items-center justify-center"
+    ></div>
     <script src="js/single.js" type="module"></script>
   </body>
 </html>
