--- a/src/login.html
+++ b/src/login.html
@@ -5,19 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="../dist/css/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/src/assets/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/favicon/apple-touch-icon.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/src/assets/favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/src/assets/favicon/apple-touch-icon.png"
+    />
     <meta name="apple-mobile-web-app-title" content="Hammer Time" />
   </head>
   <body class="bg-white text-secondary min-h-screen flex flex-col">
-    <div class="flex-grow flex items-center justify-center pt-16  px-5">
+    <div class="flex-grow flex items-center justify-center p-4">
       <div class="bg-primary p-8 rounded-lg shadow-md w-full max-w-md">
-        <h1 class="text-white text-3xl font-bold font-header text-center mb-6">Login</h1>
+        <h1 class="text-white text-3xl font-bold font-header text-center mb-6">
+          Login
+        </h1>
         <form id="loginForm" class="space-y-4">
           <div>
-            <label for="email" class="block text-sm font-medium text-white font-header"
+            <label
+              for="email"
+              class="block text-sm font-medium text-white font-header"
               >Email</label
             >
             <input
@@ -29,7 +48,9 @@
             />
           </div>
           <div>
-            <label for="password" class="block text-sm font-medium text-white font-header"
+            <label
+              for="password"
+              class="block text-sm font-medium text-white font-header"
               >Password</label
             >
             <input
