--- a/src/register.html
+++ b/src/register.html
@@ -25,9 +25,9 @@
   <body
     class="flex flex-col min-h-screen bg-white text-secondary font-body"
   >
-    <div id="content" class="flex-grow flex flex-col items-center justify-center px-5">
+    <div id="content" class="flex-grow flex flex-col items-center justify-center px-5 mt-4">
       <div
-        class="bg-primary p-8 rounded-lg shadow-md w-full max-w-md mx-auto mt-20"
+        class="bg-primary p-8 rounded-lg shadow-md w-full max-w-md mx-auto mb-5"
       >
         <h1 class="text-white text-3xl font-bold text-center mb-6">
           Create Account
