FIX: just showinfg active listings
Removed expired listings from my  active listins

--- a/src/profile.html
+++ b/src/profile.html
@@ -117,7 +117,7 @@
         id="myListingsToggle"
         class="w-full flex items-center justify-between border border-primary bg-white rounded-lg p-4 mb-4 mt-4 hover:bg-primary hover:text-white"
       >
-        <span class="font-header">My Listings</span>
+        <span class="font-header">My active listings</span>
       </button>
       <div
         id="myListings"
@@ -128,7 +128,7 @@
         id="myWinsToggle"
         class="w-full flex items-center justify-between border border-primary bg-white rounded-lg p-4 mb-4 mt-4 hover:bg-primary hover:text-white"
       >
-        <span class="font-header">My Wins</span>
+        <span class="font-header">My wins</span>
       </button>
       <div
         id="myWins"
