FEAT: update and delete
added update and delte. also fixed some indent issues

--- a/src/nav.html
+++ b/src/nav.html
@@ -20,7 +20,9 @@
         ></path>
       </svg>
     </button>
-    <a href="/index.html" class="text-xl font-bold" font-header> Hammer Time </a>
+    <a href="/index.html" class="text-xl font-bold" font-header>
+      Hammer Time
+    </a>
     <div id="menu" class="hidden lg:flex space-x-6">
       <a
         id="loginLink"
