FEAT: meta tags
added meta tags to html pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Auctions</title>
+    <title>Hammer time Auksjon</title>
     <link rel="stylesheet" href="dist/css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:wght@400;700&display=swap"
@@ -21,6 +21,9 @@
       href="/src/assets/favicon/apple-touch-icon.png"
     />
     <meta name="apple-mobile-web-app-title" content="Hammer Time" />
+    <meta name="description" content="Join Hammer Time Auction, the ultimate platform for buying, selling, and winning exclusive items through auctions. Start bidding today!">
+    <meta name="keywords" content="Hammer Time Auction, online auctions, buy and sell, bidding, auction platform">
+    <meta name="author" content="Hammer Time Auction Team">
   </head>
   <body class="bg-gray-100 min-h-screen flex flex-col">
     <main class="flex-grow container mx-auto p-4 flex flex-col items-center">
