--- a/src/login.html
+++ b/src/login.html
@@ -25,6 +25,8 @@
       href="/src/assets/favicon/apple-touch-icon.png"
     />
     <meta name="apple-mobile-web-app-title" content="Hammer Time" />
+    <meta name="keywords" content="Hammer Time Auction, online auctions, buy and sell, bidding, auction platform">
+    <meta name="author" content="Hammer Time Auction Team">
   </head>
   <body class="bg-white text-secondary min-h-screen flex flex-col">
     <div class="flex-grow flex items-center justify-center p-4">
