--- a/src/profile.html
+++ b/src/profile.html
@@ -21,6 +21,8 @@
       href="/src/assets/favicon/apple-touch-icon.png"
     />
     <meta name="apple-mobile-web-app-title" content="Hammer Time" />
+    <meta name="keywords" content="Hammer Time Auction, online auctions, buy and sell, bidding, auction platform">
+    <meta name="author" content="Hammer Time Auction Team">
   </head>
   <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
     <main class="w-full max-w-lg mx-auto p-4 mt-20 flex-grow">
