--- a/src/register.html
+++ b/src/register.html
@@ -21,6 +21,8 @@
       href="/src/assets/favicon/apple-touch-icon.png"
     />
     <meta name="apple-mobile-web-app-title" content="Hammer Time" />
+    <meta name="keywords" content="Hammer Time Auction, online auctions, buy and sell, bidding, auction platform">
+    <meta name="author" content="Hammer Time Auction Team">
   </head>
   <body
     class="flex flex-col min-h-screen bg-white text-secondary font-body"
